stage: Add ArmorTrimRegistry